Add token autocomplete with name + symbol display
- Created /api/tokens endpoint with CMC integration (5000 tokens, 24h cache)
- Built custom autocomplete dropdown replacing HTML5 datalist
- Display format: 'Bitcoin | BTC' with fuzzy search
- Search by token name OR symbol
- Keyboard navigation (arrows, enter, escape)
- Highlight matching text in results
- Show top 50 results, limited to 50 for performance
- Fallback to database tokens if CMC unavailable

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <section class="card">
       <h2 class="section-title">Select tokens to monitor</h2>
       <div class="token-select-row">
-  <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" autocomplete="off" autocorrect="off" aria-autocomplete="list" autocapitalize="characters" spellcheck="false" />
-        <datalist id="token-datalist"></datalist>
+  <input id="token-input" class="input" type="text" placeholder="Type token name or symbol (e.g., Bitcoin, BTC) and press Enter…" aria-label="Add token" autocomplete="off" autocorrect="off" aria-autocomplete="list" autocapitalize="off" spellcheck="false" />
         <button id="add-token-btn" class="btn">Add</button>
         <label class="switch small" id="showall-tokens-wrap" title="Show alerts for all tokens">
           <span class="switch-caption">Show all</span>
