Add environment indicator banner for test/staging
✨ Features:
- Prominent orange banner at top showing '🧪 TEST ENVIRONMENT'
- Only displays when NODE_ENV !== 'production'
- Animated slide-down effect on page load
- Pulsing test tube emoji for attention
- Clear message: 'Changes here won't affect production'
- New /api/environment endpoint to detect environment
- Auto-adjusts body padding to accommodate banner

🎨 Design:
- Gradient orange background (#f59e0b → #d97706)
- Fixed position at top of page (z-index: 9999)
- Responsive: stacks vertically on mobile
- Smooth animations (slideDown, pulse)

🔧 Technical:
- Checks environment via API call on page load
- Supports: staging, test, development environments
- Falls back gracefully if API unavailable
- CSS class 'has-env-banner' added to body when shown

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="./styles.css?v=20251003f" />
 </head>
 <body>
+  <!-- Environment Banner (only shown in test/staging) -->
+  <div id="env-banner" class="env-banner" hidden>
+    <span class="env-icon">🧪</span>
+    <span class="env-text">TEST ENVIRONMENT</span>
+    <span class="env-warning">Changes here won't affect production</span>
+  </div>
+
   <a href="./create.html" class="fab" aria-label="New alert" title="New alert">+</a>
 
   <header class="topbar" role="banner">
