--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
     </section>
 
     <section id="panel-summary" class="card" hidden role="tabpanel">
+      <div class="summary-toolbar" style="display:flex;align-items:center;gap:8px;justify-content:flex-end;margin-bottom:8px;">
+        <label for="summary-model" style="font-size:12px;color:#475569;">Model:</label>
+        <select id="summary-model" style="padding:6px 8px;border-radius:8px;border:1px solid rgba(2,6,23,0.12);font-size:13px;">
+          <option value="auto">Auto</option>
+          <option value="openai">OpenAI</option>
+          <option value="anthropic">Anthropic</option>
+          <option value="xai">xAI (Grok)</option>
+        </select>
+      </div>
       <div id="summary-content" class="summary"></div>
     </section>
 
