--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Crypto Lifeguard — Web Demo</title>
-  <link rel="stylesheet" href="./styles.css?v=20251003f" />
+  <!-- Fonts: Anton for display, Poppins for body (fallback Montserrat) -->
+  <link href="https://fonts.googleapis.com/css2?family=Anton:wght@400;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css?v=20251021a" />
 </head>
 <body>
   <!-- Environment Banner (only shown in test/staging) -->
@@ -138,6 +140,6 @@
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 
   <!-- IMPORTANT for Vite build -->
-  <script type="module" src="/app.js?v=20251003f"></script>
+  <script type="module" src="/app.js?v=20251021a"></script>
 </body>
 </html>
