--- a/admin.html
+++ b/admin.html
@@ -77,7 +77,7 @@
 <body>
   <header class="topbar"><div class="topbar-inner">
     <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
-      <img class="brand-logo" src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png" alt="Logo" />
+      <img class="brand-logo" src="/CLG%201.1.webp" alt="Logo" />
       <div class="brand-text"><h1 class="brand-title">Crypto Lifeguard</h1><p class="brand-tagline">Admin dashboard</p></div>
     </a>
     <div class="actions">
@@ -303,7 +303,7 @@
   });
   </script>
   <!-- Load shared tag taxonomy, then admin logic -->
-  <script src="/alerts-tags.js?v=20251003f"></script>
+  <script type="module" src="/alerts-tags.js?v=20251003f"></script>
   <script type="module" src="/admin.js?v=20251003f"></script>
 </body>
 </html>
