--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
         <img
           class="brand-logo"
-          src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png"
+          src="/CLG%201.1.webp"
           alt="Crypto Lifeguard Logo"
           decoding="async"
           fetchpriority="high"
