--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
   <header class="topbar" role="banner">
     <div class="topbar-inner">
       <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
-        <img class="brand-logo" src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png" alt="Crypto Lifeguard Logo" decoding="async" fetchpriority="high" />
+        <img class="brand-logo" src="/CLG%201.1.webp" alt="Crypto Lifeguard Logo" decoding="async" fetchpriority="high" />
         <div class="brand-text">
           <h1 class="brand-title">Crypto Lifeguard</h1>
           <p class="brand-tagline">Your account</p>
