--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 <body>
   <header class="topbar"><div class="topbar-inner">
     <div class="brand-wrap">
-      <img class="brand-logo" src="/CLG%201.1.webp" alt="Logo" />
+      <img class="brand-logo" src="/logo.webp" alt="Logo" />
       <div class="brand-text"><h1 class="brand-title">Crypto Lifeguard</h1><p class="brand-tagline">Create your account</p></div>
     </div>
     <div class="actions"><a class="menu-btn" href="/">Home</a></div>
