Add rolling price ticker banner below header
- Add animated horizontal scrolling ticker
- Display token prices with 24h change
- Auto-update every 5 minutes
- Pause animation on hover
- Update ticker when watchlist changes
- Add /api/market/prices endpoint

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
     </div>
   </header>
 
+  <!-- Price Ticker Banner -->
+  <div id="price-ticker" class="price-ticker" hidden>
+    <div class="ticker-track" id="ticker-track">
+      <div class="ticker-content" id="ticker-content">
+        <!-- Prices will be dynamically inserted here -->
+      </div>
+      <div class="ticker-content ticker-duplicate" id="ticker-duplicate">
+        <!-- Duplicate for seamless loop -->
+      </div>
+    </div>
+  </div>
+
   <main class="container">
     <section class="card">
       <h2 class="section-title">Select tokens to monitor</h2>
