Add user currency preference feature
- Add currency field to user_prefs table (migration 007)
- Add currency selector to profile page with 10 currencies
- Default currency is USD ($)
- Currency preference applies to:
  - Price ticker banner
  - Market data snapshot
  - All price displays
- Pass currency parameter to CMC API
- Update /api/me to return currency preference
- Update /api/me/prefs to save currency preference
- Include currency symbols mapping in /api/market/config

--- a/profile.html
+++ b/profile.html
@@ -316,6 +316,29 @@
       </div>
     </section>
 
+    <!-- Currency Preference -->
+    <section class="card">
+      <div class="profile-section">
+        <h3>Currency Preference</h3>
+        <div style="display: flex; align-items: center; gap: 12px; flex-wrap: wrap;">
+          <span class="muted" style="font-size: 14px;">Display prices in:</span>
+          <select id="prof-currency-select" class="input" style="width: auto; min-width: 120px; padding: 8px 12px;">
+            <option value="USD">🇺🇸 USD ($)</option>
+            <option value="EUR">🇪🇺 EUR (€)</option>
+            <option value="GBP">🇬🇧 GBP (£)</option>
+            <option value="JPY">🇯🇵 JPY (¥)</option>
+            <option value="AUD">🇦🇺 AUD (A$)</option>
+            <option value="CAD">🇨🇦 CAD (C$)</option>
+            <option value="CHF">🇨🇭 CHF</option>
+            <option value="CNY">🇨🇳 CNY (¥)</option>
+            <option value="INR">🇮🇳 INR (₹)</option>
+            <option value="BRL">🇧🇷 BRL (R$)</option>
+          </select>
+        </div>
+        <p class="muted" style="margin-top: 8px; font-size: 13px;">Your chosen currency will be used for the price ticker and market data.</p>
+      </div>
+    </section>
+
     <!-- Username & Avatar Section -->
     <section class="card">
       <div class="profile-section">
