fix: Move selected tokens pills outside collapsible dropdown
- Selected tokens now always visible as pills below dropdown
- Dropdown only contains the input field for adding tokens
- Pills auto-hide when no tokens selected
- Better UX - users can always see their selected tokens

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
           <input id="token-input" class="input" type="text" placeholder="Type token name or symbol (e.g., Bitcoin, BTC) and press Enter…" aria-label="Add token" autocomplete="off" autocorrect="off" aria-autocomplete="list" autocapitalize="off" spellcheck="false" />
           <button id="add-token-btn" class="btn">Add</button>
         </div>
-        <div id="selected-tokens" class="pill-row" aria-live="polite"></div>
       </div>
     </details>
+    
+    <!-- Selected tokens visible outside dropdown -->
+    <div id="selected-tokens" class="pill-row" aria-live="polite"></div>
 
 
 
