Fix: Add autocomplete to profile page watchlist selector
- Profile page now uses same autocomplete as main page
- Real-time token search as you type
- Keyboard navigation (arrow keys, Enter, Escape)
- Highlights matching text in results
- Updated placeholder text to match main page
- Fetches from same /api/tokens/search endpoint
- Consistent UX between main page and profile page

--- a/profile.html
+++ b/profile.html
@@ -283,7 +283,7 @@
           <h3>Watchlist</h3>
           <div id="prof-watch-pills" class="pill-row" style="margin-bottom: 10px; min-height: 32px;"></div>
           <div class="token-select-row">
-            <input id="prof-token-input" class="input" type="text" placeholder="Add token..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+            <input id="prof-token-input" class="input" type="text" placeholder="Type token name or symbol (e.g., Bitcoin, BTC) and press Enter…" autocomplete="off" autocorrect="off" aria-autocomplete="list" autocapitalize="off" spellcheck="false" />
             <button id="prof-add-token" class="btn">Add</button>
           </div>
         </div>
