--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <label for="summary-model" style="font-size:12px;color:#475569;">Model:</label>
           <select id="summary-model" style="padding:6px 8px;border-radius:8px;border:1px solid rgba(2,6,23,0.12);font-size:13px;">
             <option value="auto">Auto</option>
-            <option value="openai">OpenAI</option>
+            <option value="openai" selected>OpenAI</option>
             <option value="anthropic">Anthropic</option>
             <option value="xai">xAI (Grok)</option>
           </select>
