Configure CLG-DEPLOY to call CLG-ADMIN backend via CORS
**Frontend Changes (CLG-DEPLOY):**
- Created config.js with BACKEND_URL configuration
- Added apiUrl() helper to construct full API URLs
- Added apiFetch() wrapper to include credentials for cross-origin cookies
- Updated all fetch() calls to use apiFetch(apiUrl(...))
- Modified index.html to load config.js before app.js
- Created inject-config.sh to replace __BACKEND_URL__ placeholder at build time
- Updated nixpacks.toml to run inject script after build

**Backend Changes (CLG-ADMIN):**
- Added FRONTEND_URL and STAGING_FRONTEND_URL to CORS allowed origins
- CORS already configured with credentials: true

**How it works:**
1. Railway sets BACKEND_URL env var (e.g., https://clg-admin.railway.app)
2. Build process injects URL into dist/config.js
3. Frontend app.js uses apiUrl() to prefix all API calls
4. apiFetch() includes credentials: 'include' for cookies
5. CLG-ADMIN backend validates origin and accepts cross-origin requests

This enables CLG-DEPLOY (static frontend) to call CLG-ADMIN (backend API) across domains.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
     </div>
   </div>
 
+  <!-- Backend configuration (must load before app.js) -->
+  <script type="module" src="/config.js"></script>
+  
   <!-- IMPORTANT for Vite build -->
   <script type="module" src="/app.js?v=20251021a"></script>
 </body>
