Fix frontend to call backend API with robust fallback
- Add getApiBaseUrl() helper with production backend fallback
- Update app.js to use apiUrl() for all API calls including logos
- Add API helpers to create.js and profile.js
- Convert all fetch() calls to apiFetch(apiUrl(...)) with credentials
- Load config.js before page scripts in create.html and profile.html

This fixes the blank alerts issue by ensuring the frontend always
calls the correct backend URL even when BACKEND_URL env var is missing.
Fallback: non-localhost deployments use https://app.crypto-lifeguard.com

--- a/create.html
+++ b/create.html
@@ -109,6 +109,8 @@
     <span>© 2025 Crypto Lifeguard — demo build</span>
   </footer>
 
+  <!-- Backend configuration (must load before page script) -->
+  <script type="module" src="/config.js"></script>
   <!-- IMPORTANT: module so Vite bundles it -->
   <script type="module" src="/create.js?v=20251003f"></script>
 </body>
