--- a/profile.html
+++ b/profile.html
@@ -239,6 +239,8 @@
       }
     }
   </style>
+  <!-- Backend configuration (must load before page script) -->
+  <script type="module" src="/config.js"></script>
   <script type="module" src="/profile.js?v=20251003f"></script>
 </head>
 <body>
