Reorganize: move frontend to apps/frontend/, docs to docs/, archive old test files

--- a/apps/frontend/create.html
+++ b/apps/frontend/create.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create Alert — Crypto Lifeguard</title>
-  <link rel="stylesheet" href="/styles.css?v=20251002" />
+  <link rel="stylesheet" href="/src/styles.css?v=20251002" />
 </head>
 <body>
   <!-- Consistent dark-blue banner like the home page -->
@@ -110,8 +110,8 @@
   </footer>
 
   <!-- Backend configuration (must load before page script) -->
-  <script type="module" src="/config.js"></script>
+  <script type="module" src="/src/config.js"></script>
   <!-- IMPORTANT: module so Vite bundles it -->
-  <script type="module" src="/create.js?v=20251003f"></script>
+  <script type="module" src="/src/create.js?v=20251003f"></script>
 </body>
 </html>
