--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -21,7 +21,7 @@
   </script>
   <!-- Fonts: Anton for display, Poppins for body (fallback Montserrat) -->
   <link href="https://fonts.googleapis.com/css2?family=Anton:wght@400;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css?v=20251021a" />
+  <link rel="stylesheet" href="/src/styles.css?v=20251021a" />
 </head>
 <body>
   <!-- Environment Banner (only shown in test/staging) -->
@@ -229,9 +229,9 @@
   </div>
 
   <!-- Backend configuration (must load before app.js) -->
-  <script type="module" src="/config.js"></script>
+  <script type="module" src="/src/config.js"></script>
   
   <!-- IMPORTANT for Vite build -->
-  <script type="module" src="/app.js?v=20251021a"></script>
+  <script type="module" src="/src/app.js?v=20251021a"></script>
 </body>
 </html>
