--- a/apps/frontend/profile.html
+++ b/apps/frontend/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profile — Crypto Lifeguard</title>
-  <link rel="stylesheet" href="/styles.css?v=20251003f" />
+  <link rel="stylesheet" href="/src/styles.css?v=20251003f" />
   <style>
     /* Profile Header */
     .profile-header { 
@@ -240,8 +240,8 @@
     }
   </style>
   <!-- Backend configuration (must load before page script) -->
-  <script type="module" src="/config.js"></script>
-  <script type="module" src="/profile.js?v=20251003f"></script>
+  <script type="module" src="/src/config.js"></script>
+  <script type="module" src="/src/profile.js?v=20251003f"></script>
 </head>
 <body>
   <a href="/create.html" class="fab" aria-label="New alert" title="New alert">+</a>
