--- a/apps/frontend/signup.html
+++ b/apps/frontend/signup.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sign up — Crypto Lifeguard</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/src/styles.css" />
   <style>.auth-card{max-width:520px;margin:24px auto}</style>
   <script defer>
     async function googleLogin(){ window.location.href = '/auth/google'; }
