Fix layout: Move All/Closed toggles inline with token pills
- Moved toggle buttons from tabsbar to be inline with token pills
- Created .tokens-and-toggles-row flex container
- Toggles now aligned to the right on same line as selected tokens
- Improved visual hierarchy and space usage

--- a/apps/admin/main-app-dist/create.html
+++ b/apps/admin/main-app-dist/create.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create Alert — Crypto Lifeguard</title>
-  <script type="module" crossorigin src="/assets/create-TA7VJ_yY.js"></script>
+  <script type="module" crossorigin src="/assets/create-NnaGdsV6.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/config-B88kdatl.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-BZsEe5DB.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-DjocSoEW.css">
 </head>
 <body>
   <!-- Consistent dark-blue banner like the home page -->
