--- a/apps/admin/main-app-dist/profile.html
+++ b/apps/admin/main-app-dist/profile.html
@@ -239,9 +239,9 @@
     }
   </style>
   <!-- Backend configuration (must load before page script) -->
-  <script type="module" crossorigin src="/assets/profile-DyIoN25U.js"></script>
+  <script type="module" crossorigin src="/assets/profile-CWhlBWJv.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/config-B88kdatl.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-BZsEe5DB.css">
+  <link rel="stylesheet" crossorigin href="/assets/main-DjocSoEW.css">
 </head>
 <body>
   <a href="/create.html" class="fab" aria-label="New alert" title="New alert">+</a>
