Fix token logos: Configure frontend to call backend API
- Set BACKEND_URL to admin backend (clg-admin-production.up.railway.app)
- Frontend was trying to call /api/logo on its own domain (404)
- Backend has the logo endpoint and CoinGecko integration
- Now logos will load correctly from backend API

--- a/apps/admin/main-app-dist/create.html
+++ b/apps/admin/main-app-dist/create.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create Alert — Crypto Lifeguard</title>
-  <script type="module" crossorigin src="/assets/create-NnaGdsV6.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/config-B88kdatl.js">
+  <script type="module" crossorigin src="/assets/create-eNt8Bg9T.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/config-D5DNV0UN.js">
   <link rel="stylesheet" crossorigin href="/assets/main-DjocSoEW.css">
 </head>
 <body>
