--- a/apps/admin/main-app-dist/profile.html
+++ b/apps/admin/main-app-dist/profile.html
@@ -239,8 +239,8 @@
     }
   </style>
   <!-- Backend configuration (must load before page script) -->
-  <script type="module" crossorigin src="/assets/profile-CWhlBWJv.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/config-B88kdatl.js">
+  <script type="module" crossorigin src="/assets/profile-DV44qNiL.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/config-D5DNV0UN.js">
   <link rel="stylesheet" crossorigin href="/assets/main-DjocSoEW.css">
 </head>
 <body>
