--- a/apps/admin/main-app-dist/index.html
+++ b/apps/admin/main-app-dist/index.html
@@ -21,8 +21,8 @@
   </script>
   <!-- Fonts: Anton for display, Poppins for body (fallback Montserrat) -->
   <link href="https://fonts.googleapis.com/css2?family=Anton:wght@400;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-  <script type="module" crossorigin src="/assets/main-w7rFQ2yX.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/config-B88kdatl.js">
+  <script type="module" crossorigin src="/assets/main-CQUoGi0h.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/config-D5DNV0UN.js">
   <link rel="stylesheet" crossorigin href="/assets/main-DjocSoEW.css">
 </head>
 <body>
