fix: load config.js as non-module script to ensure BACKEND_URL set before app initialization

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -21,6 +21,8 @@
   </script>
   <!-- Fonts: Anton for display, Poppins for body (fallback Montserrat) -->
   <link href="https://fonts.googleapis.com/css2?family=Anton:wght@400;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+  <!-- Load config BEFORE Vite bundles to ensure BACKEND_URL is set -->
+  <script src="/config.js"></script>
   <link rel="stylesheet" href="/src/styles.css?v=20251021a" />
 </head>
 <body>
@@ -228,10 +230,8 @@
     </div>
   </div>
 
-  <!-- Backend configuration (must load before app.js) -->
-  <script type="module" src="/src/config.js"></script>
-  
-  <!-- IMPORTANT for Vite build -->
+  <!-- Backend configuration loaded in HEAD -->
+  <!-- App.js loaded by Vite bundle -->
   <script type="module" src="/src/app.js?v=20251021a"></script>
 </body>
 </html>
